--- a/Predicting_which_passengers_survived_the_Titanic_shipwreck.ipynb
+++ b/Predicting_which_passengers_survived_the_Titanic_shipwreck.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoGqvsdhiYiB72H+IA1/rs",
+      "authorship_tag": "ABX9TyNs6t6TWHyi0Ei2Yh9deInA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": null,
       "metadata": {
         "id": "CpPUcMbwKbKz"
       },
@@ -62,7 +62,7 @@
         "id": "mwONbl6FLV6r",
         "outputId": "c08b9339-00df-46bb-ebc2-2232d4e47c0c"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "mRNABK88MGF3"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "id": "LtjXJLg2Mqz4",
         "outputId": "1c5fb938-6efd-4dc0-cce0-acfb8bd51c3e"
       },
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,7 +335,7 @@
         "id": "6z-IUXF5qzG9",
         "outputId": "d9fa2ea6-2f07-41d6-9316-9569ee1006b6"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +362,7 @@
         "id": "AdKHS2y_O3AO",
         "outputId": "d73ee97d-a854-44f7-cfc2-ca299efd3d8b"
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +586,7 @@
         "id": "XLVXyrJhq7bq",
         "outputId": "aff2d7e4-1de7-442c-e2af-56e86847ac88"
       },
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,7 +619,7 @@
       "metadata": {
         "id": "c4f9LVdNqtSi"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -635,7 +635,7 @@
         "id": "sB4KRUzlt81G",
         "outputId": "dd1dcbed-9d67-4dd9-ccb6-e3e4400b51f9"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
       "metadata": {
         "id": "6TypvIGluBSj"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -868,7 +868,7 @@
       "metadata": {
         "id": "k-elCg_ny1tJ"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -883,7 +883,7 @@
         "id": "qlbDXKB3qV6m",
         "outputId": "0a8da764-860f-4bfd-cfd7-7ea7c7c74d1b"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,7 +921,7 @@
         "id": "K63q-9Lz0RD5",
         "outputId": "e8dd665e-1456-425d-80a0-c0761dd05da5"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,7 +954,7 @@
       "metadata": {
         "id": "ZVTU66ls05Eb"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -965,7 +965,7 @@
       "metadata": {
         "id": "FJwPcOcu3rr-"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -976,7 +976,7 @@
       "metadata": {
         "id": "5JsUW6Re9hZ-"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -990,7 +990,7 @@
       "metadata": {
         "id": "hy2xrdrq9x8m"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1001,7 +1001,7 @@
       "metadata": {
         "id": "bVHfBR8Z-bZt"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1015,7 @@
       "metadata": {
         "id": "pcckztwD-oIW"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1032,7 +1032,7 @@
       "metadata": {
         "id": "HsDbrp9N_MNa"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1048,7 +1048,7 @@
         "id": "lrUxM91T_LKl",
         "outputId": "96faef1a-72cb-498a-dcd9-89c4451350fd"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1254,7 +1254,7 @@
         "id": "DTH9w4zmXP7F",
         "outputId": "b7f6b96a-8262-4ee3-edba-5f9c6aef6158"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1522,7 +1522,7 @@
         "id": "qiUm-gf0_LoS",
         "outputId": "c6891565-8aa9-4d61-8abc-bc141c01cb92"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1559,7 +1559,7 @@
         "id": "fcwPaSph8BpM",
         "outputId": "75204e8b-3354-4e7a-ac21-d0fdb48f14ca"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1593,7 +1593,7 @@
       "metadata": {
         "id": "EeyvGCwbXufE"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1616,7 +1616,7 @@
         "id": "Ns6YPAnUXuv8",
         "outputId": "422d29ac-3ed8-416d-d497-2c4b3e08a37a"
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1640,7 +1640,7 @@
       "metadata": {
         "id": "HYXDRx2HXvF7"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1655,7 +1655,7 @@
         "id": "de52e3LUZelm",
         "outputId": "1618905b-5c46-44cc-b9b1-f5d8fe8f6362"
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1687,7 +1687,7 @@
         "id": "JpLdYz3lZe67",
         "outputId": "520985a8-3362-49f8-8d82-70bdfd39a98b"
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1883,7 +1883,7 @@
         "id": "hywDN6svZfSD",
         "outputId": "a796a99b-f96d-4789-d19d-522b74472a81"
       },
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1904,8 +1904,7 @@
       "cell_type": "code",
       "source": [
         "print(model.feature_importances_) # imporatance of each features to predict the Y value\n",
-        "# most important input features is (sex = 0.29)\n",
-        ""
+        "# most important input features is (sex = 0.29)\n"
       ],
       "metadata": {
         "colab": {
@@ -1914,7 +1913,7 @@
         "id": "OLPoeoLibEqO",
         "outputId": "98324669-a4ed-4946-a489-ad6cf456b378"
       },
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1943,7 +1942,7 @@
         "id": "PHZzANlKb44v",
         "outputId": "8520a751-4137-43fb-ade3-3b75362f5cfb"
       },
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1977,7 +1976,7 @@
       "metadata": {
         "id": "-tR_wtptf2C4"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1998,7 +1997,7 @@
       "metadata": {
         "id": "ATDWd4DZf13Z"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2027,7 +2026,7 @@
         "id": "7nEIiYAnf1tV",
         "outputId": "1ac72df6-d10f-453e-91b6-39af04341bc1"
       },
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2047,7 +2046,7 @@
       "metadata": {
         "id": "eDdHl7XMf1SJ"
       },
-      "execution_count": 208,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2069,7 +2068,7 @@
         "id": "nAghDg0GlXvk",
         "outputId": "68afeaca-c745-439e-8af0-a75c61d8728f"
       },
-      "execution_count": 209,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2089,7 +2088,7 @@
       "metadata": {
         "id": "CGkBm8oRb5ZB"
       },
-      "execution_count": 210,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2100,14 +2099,13 @@
       "metadata": {
         "id": "2757yT_4k-BW"
       },
-      "execution_count": 211,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "rf_random.fit(X,Y)\n",
-        ""
+        "rf_random.fit(X,Y)\n"
       ],
       "metadata": {
         "colab": {
@@ -2117,7 +2115,7 @@
         "id": "X0lP7FA-k9-b",
         "outputId": "e9d0f504-2659-4ce5-a781-688f9ac118af"
       },
-      "execution_count": 212,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2525,7 +2523,7 @@
         "id": "5p8Js6lrnwMJ",
         "outputId": "2f93bca3-9bd4-4c66-a630-070fb10612a1"
       },
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2556,7 +2554,7 @@
       "metadata": {
         "id": "XTU4CbbtoBN4"
       },
-      "execution_count": 214,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2567,7 +2565,7 @@
       "metadata": {
         "id": "c5A_hnjQpIb0"
       },
-      "execution_count": 215,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2582,7 +2580,7 @@
         "id": "iQHB2BGxpn2S",
         "outputId": "862046ce-8560-48df-ded5-5f56dd94968f"
       },
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2608,7 +2606,7 @@
         "id": "DuSuXFK6ptKc",
         "outputId": "6dec3ef5-79ce-4abf-bebb-214edee9d3f8"
       },
-      "execution_count": 217,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2635,7 +2633,7 @@
         "id": "8FwQUiH4t0Sh",
         "outputId": "34a5f2ed-5049-40b5-9f42-2690a4372026"
       },
-      "execution_count": 218,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2830,7 +2828,7 @@
       "metadata": {
         "id": "-Vdz3KvltfSB"
       },
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2845,7 +2843,7 @@
         "id": "qn2kgcTe_-Cm",
         "outputId": "c3b15402-4380-4642-c7b1-cfba6e615f5c"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2872,7 +2870,7 @@
         "id": "0JNiZakHATCR",
         "outputId": "db7390ce-35b9-44b6-c7ef-d15facdf2fc5"
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3078,7 +3076,7 @@
         "id": "WzKvD46AAs56",
         "outputId": "676e895e-033e-4046-80d3-6a46ec8ba2d0"
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3277,7 +3275,7 @@
         "id": "GM9ktVdeAh9j",
         "outputId": "7eb9a3d2-725f-4c0e-e390-a7b774d4ba8d"
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3312,7 +3310,7 @@
       "metadata": {
         "id": "CGVt0xB2B7tx"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3327,7 +3325,7 @@
         "id": "37ZRj9ygB9oP",
         "outputId": "bb9934fd-bb39-46d9-9cee-207b1f598501"
       },
-      "execution_count": 225,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3349,7 +3347,7 @@
       "metadata": {
         "id": "030FauX0ooxQ"
       },
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3360,7 +3358,7 @@
       "metadata": {
         "id": "liRagOe9CFPZ"
       },
-      "execution_count": 227,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3377,7 +3375,7 @@
         "id": "D-wE0nE-oXDl",
         "outputId": "1943fd26-f16e-4b83-8831-2c4e0f0aee92"
       },
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3412,7 +3410,7 @@
         "id": "uifSVYSUvsOp",
         "outputId": "a72a2d4a-4ef1-4293-affc-d4536a4b2bdf"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3620,7 +3618,7 @@
       "metadata": {
         "id": "l95lI0vm9l1T"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3628,7 +3626,7 @@
       "source": [
         "import tensorflow_decision_forests as tfdf\n",
         "\n",
-        "#train_dataset = tfdf.keras.pd_dataframe_to_tf_dataset(train_data, task=tfdf.keras.Task.REGRESSION, label=\"label_column\")\n",
+        "##train_dataset = tfdf.keras.pd_dataframe_to_tf_dataset(train_data, task=tfdf.keras.Task.REGRESSION, label=\"label_column\")\n",
         "\n",
         "train_dataset = tfdf.keras.pd_dataframe_to_tf_dataset(train_new, task=tfdf.keras.Task.REGRESSION, label=\"Survived\")\n",
         "\n",
@@ -3656,7 +3654,7 @@
         "id": "rBUYg6iR05sk",
         "outputId": "bf2c92d4-8db4-45e3-c459-092c185082ec"
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3850,7 +3848,7 @@
         "id": "4F3VyqTq-rV9",
         "outputId": "c57885cf-66c5-4985-926c-a612dfc0ece1"
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4044,7 +4042,7 @@
         "id": "4WECddS5-0Kw",
         "outputId": "96a8fce7-60bd-474a-a3b1-ac6cc4ab8168"
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4298,7 +4296,7 @@
         "id": "nJ_eGVJe1TSw",
         "outputId": "3082b765-3546-4a83-86bf-847feddd4de3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
