--- a/Predicting_which_passengers_survived_the_Titanic_shipwreck.ipynb
+++ b/Predicting_which_passengers_survived_the_Titanic_shipwreck.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoGqvsdhiYiB72H+IA1/rs",
+      "authorship_tag": "ABX9TyPesT5JFDCH8MW2eV/+Lnok",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3633,6 +3633,7 @@
         "model = tfdf.keras.RandomForestModel(task=tfdf.keras.Task.REGRESSION)\n",
         "\n",
         "# Train the model\n",
+        "# the 2nd model\n",
         "model.fit(train_dataset)\n"
       ],
       "metadata": {
